--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             Además, MKLibrary está diseñada para ser altamente personalizable, lo que significa que puede ser adaptada para satisfacer las necesidades específicas de cualquier proyecto. Los desarrolladores pueden fácilmente agregar, editar y eliminar estilos y componentes para adaptarlos a los requerimientos de su proyecto. <br><br>
             
             En esta documentación, encontrarás información detallada sobre cómo usar MKLibrary, incluyendo cómo instalarla, cómo utilizar sus características y herramientas, y cómo personalizarla para satisfacer tus necesidades. Esperamos que MKLibrary te sea de gran ayuda para tus proyectos y que puedas sacar el máximo provecho de ella.</span>
-        <span class="sf-3 gf pab-5">Integrantes:</span>
+        <span class="sf-3 gf pab-5">MKLibrary desarrollado por:</span>
         <span  class="sf-2 pab-5">Diego Isaac García Pimentel</span><br>
         <span  class="sf-2 pab-5">Angel Fernando Iraheta Sanchez</span><br>
         <span  class="sf-2 pab-5">Josue Isaac Herrera Campos</span><br>
