--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div style=" margin-left: 19.7%; padding-top: 11vh; height: 100%;display: flex; flex-direction: column; " class="cf-r5 p-5 par-5">
         
         
-        <img class="contenedor" style=" width: 600px; height: auto; padding: 0; " src="/MKLibrary/img/1.png" alt="">
+        <img class="contenedor" style=" width: 30%; height: auto; padding: 0; " src="/MKLibrary/img/1.png" alt="">
         <span class="sf-5 mab-5 gf">Introducción</span>
         <span class="sf-2 alert mab-5 ta-justify">Bienvenido a la documentación de MKLibrary, una librería desarrollada en SASS para facilitar el proceso de diseño y desarrollo de sitios web. Esta librería está diseñada para ser altamente modular y fácil de usar, con componentes reutilizables que pueden ser adaptados y personalizados para satisfacer las necesidades de cualquier proyecto. <br><br>
 
