--- a/enlaces/alertar.html
+++ b/enlaces/alertar.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/MKLibrary/scss/reset.css">
-    <link rel="stylesheet" href="/MKLibrary/scss/style.css">
-    <link rel="shortcut icon" href="/MKLibrary/img/icon.ico">
+    <link rel="stylesheet" href="./scss/reset.css">
+    <link rel="stylesheet" href="./scss/style.css">
+    <link rel="shortcut icon" href="./img/icon.ico">
 
+    <title>MK LIBRARY</title>
     <title>Documentación MKLibrary</title>
 </head>
 <body class="ttxt-Arial">
     <header class="fondo-menu fj">
         <div class="navbar ">
-            <img   class="ig p-3" src="img/1.png"   alt="MK LIBRARY" >
+            <img   class="ig p-3" src="./img/1.png"   alt="MK LIBRARY" >
             <ul>
-                <li class="etiqueta rde-s"><a class="t-none"  href="/MKLibrary/index.html">INICIO</a></li>
-                <li class="etiqueta rde-s"><a class="t-none" href="https://github.com/Isaac684/MKLibrary/graphs/contributors">CONTACTOS</a></li>
-                <li class="etiqueta rde-s"> <a class="t-none" href="https://github.com/Isaac684/MKLibrary">ACERCA DE</a></li>
-                <li class="etiqueta rde-s"> <a class="t-none" href="#">REDES SOCIALES</a></li>
+                <li class="etiqueta rde-s"><a class="t-none"  href="./index.html">INICIO</a></li>
+                <li class="etiqueta rde-s"><a class="t-none" href="./enlaces/botones.html">DOCUMENTACION</a></li>
+                <li class="etiqueta rde-s"> <a class="t-none" href="https://github.com/Isaac684/MKLibrary/graphs/contributors">ACERCA DE</a></li>
+                <li class="etiqueta rde-s"> <a class="t-none" href="https://github.com/Isaac684/MKLibrary">GITHUB</a></li>
             </ul>
             </div> 
     </header>
