--- a/enlaces/documentacion.html
+++ b/enlaces/documentacion.html
@@ -46,7 +46,10 @@
         <a class="link-s sf-2" href="./colores.html">Colores de fondo</a>
     </div>
 
-
+    <div  style="margin-left: 19.7%; padding-top: 11vh; height: 318vh;display: flex; flex-direction: column; " class=" contenedor cf-r5 p-5 par-5">
+ 
+        <span class="contenedor sf-5">INTRODUCION</span>
+    </div>
        
 </body>
 </html>
