--- a/enlaces/documentacion.html
+++ b/enlaces/documentacion.html
@@ -46,9 +46,12 @@
         <a class="link-s sf-2" href="./colores.html">Colores de fondo</a>
     </div>
 
-    <div  style="margin-left: 19.7%; padding-top: 11vh; height: 318vh;display: flex; flex-direction: column; " class=" contenedor cf-r5 p-5 par-5">
+    <div  style="margin-left: 19.7%; padding-top: 11vh; height: 318vh;display: flex; flex-direction: column; " class="cf-r5 p-5 par-5">
  
-        <span class="contenedor sf-5">INTRODUCION</span>
+        <span class="sf-5 mab-5 gf">INTRODUCION</span>
+        <span class="sf-2 alert mab-5 ta-justify">En este apartado se visualizan cada uno de los componentes y su correspondiente documentación para la aplicación de la libreria MK LIBRARY <br><br><br><br><br><br><br><br><br>
+            <img class="contenedor " style=" width: 30%; height: auto; padding: 0; " src="/MKLibrary/img/1.png" alt="">
+    
     </div>
        
 </body>
