--- a/enlaces/moverElementos.html
+++ b/enlaces/moverElementos.html
@@ -46,6 +46,31 @@
         <a class="link-s sf-2" href="./colores.html">Colores de fondo</a>
     </div>
     <div style=" margin-left: 19.7%; padding-top: 11vh; height: 87vh; " class="cf-r5 p-5 par-5">
+        <h1 class="gf sf-5">Posicionamiento de elementos</h1>
+        <p class="mar-5 sf-3">En MKLibrary es posible posicionar elementos en un total de 9 posiciones diferentes como son <span class="gf">Arriba centrado, abajo centrado, centrado a la derecha y a la izquierda, arriba, abajo, a la derecha, a la izquierda etc</p>
+
+        <h2 class="gf sf-3 mar-5"></h2>
+        <p class="mar-5 sf-2">La   forma de llamar estas propiedades es la siguiente:</p>
+        <p class="mar-5 sf-2"><span class="color-font-peligro">arriba</span>: Tamaño <= 540px</p>
+        <p class="mar-5 sf-2"><span class="color-font-peligro">abajo</span>: Tamaño <= 720px</p>
+        <p class="mar-5 sf-2"><span class="color-font-peligro">centrado</span>: Tamaño <= 960px</p>
+        <p class="mar-5 sf-2"><span class="color-font-peligro">izquierda</span>: Tamaño <= 1200px</p>
+        <p class="mar-5 sf-2"><span class="color-font-peligro">derecha</span>: Tamaño <= 1400px</p>
+        <p class="mar-5 sf-2">La propiedad centrado, tiene unas variaciones como lo son, centrado-izquierda, centrado-derecha, centrado-arriba, centrado-abajo. Las propiedades como abajo y derecha se pueden combinar para posicionar de otra forma el elemento, a continuacion una demostracion de esto:</p><br><br>
+        <p>
+            <div style="width: 600px; height: 400px;" class="contenedor-100 color-font-oscuro sf-2 cf-primario pos-rel">
+                <div class="izquierda b-oscuro-1 p-2">izquierda</div>
+                <div class="centrado-arriba b-oscuro-1 p-2">centrado-arriba</div>
+                <div class="derecha b-oscuro-1 p-2">derecha</div>
+                <div class="centrado-izquierda b-oscuro-1 p-2">centrado-izquierda</div>
+                <div class="centrado b-oscuro-1 p-2">centrado</div>
+                <div class="centrado-derecha b-oscuro-1 p-2">centrado-derecha</div>
+                <div class="abajo b-oscuro-1 p-2">abajo</div>
+                <div class="centrado-abajo b-oscuro-1 p-2">centrado-abajo</div>
+                <div class="abajo derecha b-oscuro-1 p-2">abajo derecha</div>
+            </div> <br><br>
+        </p>
+
     </div>
 </body>
 </html>
